[package]
name = "hello_rsocket"
version = "0.1.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/feuyeux/hello-rsocket-rust"
homepage = "https://github.com/feuyeux/hello-rsocket-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rsocket_rust = "0.5.2"
rsocket_rust =  { git = "https://github.com/rsocket/rsocket-rust", branch = "feature/messaging" }
rsocket_rust_transport_tcp = { git = "https://github.com/rsocket/rsocket-rust", branch = "feature/messaging" }
rsocket_rust_messaging = { git = "https://github.com/rsocket/rsocket-rust", branch = "feature/messaging" }
bytes = "0.5.4"
futures = "0.3.4"
tokio =  "0.2.20"
tokio-util = "0.3.1"
serde_json = "1.0.52"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.2"