[package]
name = "hello_rsocket"
version = "0.7.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/feuyeux/hello-rsocket-rust"
homepage = "https://github.com/feuyeux/hello-rsocket-rust"

[dependencies]
rsocket_rust =  "0.7"
rsocket_rust_transport_tcp = "0.7"
rsocket_rust_messaging = "0.7"

log ="0.4.13"
bytes = "1.0.1"
futures = "0.3.10"
serde_json = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.2"

lazy_static = "1.4.0"
async-trait = "0.1.42"
async-stream = "0.3.0"

[dependencies.tokio]
version = "1.0.1"
default-features = false
features = [ "macros", "rt", "rt-multi-thread", "sync", "time" ]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"